--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -42,8 +42,8 @@
             android:layout_height="0dp"
             android:layout_weight="2"
             android:gravity="center"
-            android:inputType="textPersonName"
-            android:hint="Write txet to file here" />
+            android:hint="Write txet to file here"
+            android:inputType="textMultiLine|textPersonName" />
 
         <Space
             android:layout_width="match_parent"
@@ -65,6 +65,7 @@
                 android:layout_width="0dp"
                 android:layout_height="match_parent"
                 android:layout_weight="2"
+                android:onClick="write"
                 android:autoSizeTextType="uniform"
                 android:text="Write file" />
 
@@ -77,7 +78,7 @@
         <Space
             android:layout_width="match_parent"
             android:layout_height="0dp"
-            android:layout_weight="1" />
+            android:layout_weight="0.5" />
 
         <LinearLayout
             android:layout_width="match_parent"
@@ -94,6 +95,7 @@
                 android:layout_width="0dp"
                 android:layout_height="match_parent"
                 android:layout_weight="2"
+                android:onClick="reset"
                 android:autoSizeTextType="uniform"
                 android:text="Reset" />
 
@@ -106,7 +108,7 @@
         <Space
             android:layout_width="match_parent"
             android:layout_height="0dp"
-            android:layout_weight="1" />
+            android:layout_weight="0.5" />
 
         <LinearLayout
             android:layout_width="match_parent"
@@ -123,6 +125,7 @@
                 android:layout_width="0dp"
                 android:layout_height="match_parent"
                 android:layout_weight="2"
+                android:onClick="read"
                 android:autoSizeTextType="uniform"
                 android:text="Read file" />
 
@@ -139,6 +142,8 @@
 
         <TextView
             android:id="@+id/tV"
+            android:gravity="center"
+            android:hint="Read txet file to here"
             android:layout_width="match_parent"
             android:layout_height="0dp"
             android:layout_weight="4" />
